Sessão blog adicionado
Foi adicionado na página a section blog

--- a/index.html
+++ b/index.html
@@ -98,34 +98,50 @@
         </div>
     </section>
 
-    <!-- <section class="blog">
-        <article class="cards-blog">
-            <div class="card1">
-                <img src="imagens/card4.jpg" alt="">
-                <h2>Card 1</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                <a href="">Saiba mais</a>
+    <section class="blog">
+        <div class="blog-heading">
+            <span>My recent post</span>
+            <h3>My Blog</h3>
+        </div>
+
+        <div class="blog-container">
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="imagens/marketing.jpg" alt="Marketing">
+                </div>
+                <div class="blog-text">
+                    <span>18 July 2021 / Web Design</span>
+                    <a href="#" class="blog-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</a>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet consequatur dignissimos, illum magni unde atque. Doloribus optio labore cum voluptates rem, debitis impedit adipisci, ut distinctio nemo nulla. Impedit, non.</p>
+                    <a href="#">Saiba mais</a>
+                </div>
             </div>
-            <div>
-                <img src="imagens/card4.jpg" alt="">
-                <h2>Card 2</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                <a href="">Saiba mais</a>
+
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="imagens/marketing.jpg" alt="Marketing">
+                </div>
+                <div class="blog-text">
+                    <span>18 July 2021 / Web Design</span>
+                    <a href="#" class="blog-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</a>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet consequatur dignissimos, illum magni unde atque. Doloribus optio labore cum voluptates rem, debitis impedit adipisci, ut distinctio nemo nulla. Impedit, non.</p>
+                    <a href="#">Saiba mais</a>
+                </div>
             </div>
-            <div>
-                <img src="imagens/card4.jpg" alt="">
-                <h2>Card 3</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                <a href="">Saiba mais</a>
+
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="imagens/marketing.jpg" alt="Marketing">
+                </div>
+                <div class="blog-text">
+                    <span>18 July 2021 / Web Design</span>
+                    <a href="#" class="blog-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</a>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet consequatur dignissimos, illum magni unde atque. Doloribus optio labore cum voluptates rem, debitis impedit adipisci, ut distinctio nemo nulla. Impedit, non.</p>
+                    <a href="#">Saiba mais</a>
+                </div>
             </div>
-            <div>
-               <img src="imagens/card4.jpg" alt="">
-                <h2>Card 4</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                <a href="">Saiba mais</a>
-            </div>
-        </article>
-    </section> -->
+        </div>
+    </section>
 
     <footer class="rodape">
         <div class="redes">
