Título do blog modificado

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
     <section class="blog">
         <div class="blog-heading">
-            <span>My recent post</span>
-            <h3>My Blog</h3>
+            <!-- <span>My recent post</span> -->
+            <h3>Blog</h3>
         </div>
 
         <div class="blog-container">
