Sessão vantagens modificada

--- a/index.html
+++ b/index.html
@@ -69,7 +69,45 @@
         </div>
     </article>
 
+    
+
     <section class="vantagens">
+        <h2>Vantagens em contratar <br> os nossos serviços</h2>
+        <article>
+            <div class="vt1">
+                <img src="imagens/imgbranco.png" alt="">
+                <h3>título</h3>
+                <p class="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+            <div class="vt2">
+                <img src="imagens/imgbranco.png" alt="">
+                <h3>título</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+            <div class="vt3">
+                <img src="imagens/imgbranco.png" alt="">
+                <h3>título</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+            <div class="vt4">
+                <img src="imagens/imgbranco.png" alt="">
+                <h3>título</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+            <div class="vt5">
+                <img src="imagens/imgbranco.png" alt="">
+                <h3>título</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+            <div class="vt6">
+                <img src="imagens/imgbranco.png" alt="">
+                <h3>título</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+        </article>
+    </section>
+
+    <!-- <section class="vantagens">
         <h2>Vantagens em contratar <br> os nossos serviços</h2> 
             <article class="vantagens-bg">
                 <div>
@@ -89,7 +127,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod repellat, perferendis ex dicta, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo provident ad ullam sapiente, ea vel dolore soluta amet. Consectetur tempora blanditiis aliquam fugit temporibus et rerum harum cum? Molestiae, corporis?</p>
                 </div>
             </article>
-    </section>
+    </section> -->
 
     <section class="contato">
         <div>
@@ -166,6 +204,5 @@
     <div class="create">
         <a href="">Create By Carlos Brito</a>
     </div>
-
 </body>
 </html>
