Código html modificado

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             <a href="">Av. Paulista, São Paulos - SP, 01310-904 </a>
         </div>
     </footer>
-    <div class="create">
+    <!-- <div class="create">
         <a href="">Create By Carlos Brito</a>
-    </div>
+    </div> -->
 </body>
 </html>
