--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <article>
             <div class="agencia">
                 <h2>Bem-vindo à empresa de Marketing Digital</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque possimus esse, libero qui ullam totam. Consequuntur molestiae temporibus, quos, iusto labore praesentium voluptatum in inventore numquam cupiditate aperiam illum molestias?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque possimus esse, libero qui ullam totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque possimus esse, libero qui ullam totam.  </p>
                 <button>Saiba Mais</button>
             </div>
         </article>
