--- a/contato.html
+++ b/contato.html
@@ -5,26 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empresa de Marketing</title>
     <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <header class="cabecalho">
+        <nav class="nav">
+            <a href="" class="logo">Logo</a>
+            <button class="hamburguer"></button>
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href=".servicos.html">Serviços</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+        <!-- <article>
+            <div class="agencia">
+                <h2>Bem-vindo à empresa de Marketing Digital</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque possimus esse, libero qui ullam totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque possimus esse, libero qui ullam totam.  </p>
+                <button>Saiba Mais</button>
+            </div>
+        </article> -->
+    </header>
+
+    <!-- <article>
+        <details>
+            <summary>Pergunta 1</summary>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laudantium autem beatae laborum veniam aperiam temporibus ut commodi laboriosam mollitia eum minus culpa similique nostrum assumenda sed illo, praesentium ducimus.</p>
+        </details>
+        <details>
+            <summary>Pergunta 1</summary>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laudantium autem beatae laborum veniam aperiam temporibus ut commodi laboriosam mollitia eum minus culpa similique nostrum assumenda sed illo, praesentium ducimus.</p>
+        </details>
+        <details>
+            <summary>Pergunta 1</summary>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laudantium autem beatae laborum veniam aperiam temporibus ut commodi laboriosam mollitia eum minus culpa similique nostrum assumenda sed illo, praesentium ducimus.</p>
+        </details>
+        <details>
+            <summary>Pergunta 1</summary>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laudantium autem beatae laborum veniam aperiam temporibus ut commodi laboriosam mollitia eum minus culpa similique nostrum assumenda sed illo, praesentium ducimus.</p>
+        </details>
+        <details>
+            <summary>Pergunta 1</summary>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laudantium autem beatae laborum veniam aperiam temporibus ut commodi laboriosam mollitia eum minus culpa similique nostrum assumenda sed illo, praesentium ducimus.</p>
+        </details>
+    </article> -->
+
     <section>
         <div class="container"> 
             <div class="formulario">
                 <h1>Fale conosco </h1>
-                <form action="https://formsubmit.co/carlosbrito8419@gmail.com" method="POST">
+                <form action="https://api.staticforms.xyz/submit" method="post">
                     <div>
-                        <input type="text" id="" placeholder="Nome" required>
+                        <input type="text" name="name" id="" placeholder="Nome" required>
                     </div>
                     <div>
-                        <input type="email" id="" placeholder="Email" required>
+                        <input type="email" name="email" id="" placeholder="Email" required>
                     </div>
                     <div>
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem"></textarea required>
+                        <textarea name="message" id="" cols="30" rows="10" placeholder="Mensagem"></textarea required>
                     </div> 
-                    <div>
-                        <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
-                    </div>
                     <button type="submit">Enviar</button>
+                    <input type="hidden" name="accessKey" value="c91ce90e-8bd1-4277-9f72-f90379535865">
+                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/obrigado.html">
                 </form>
             </div>
             <div class="formulario-img">
@@ -33,5 +78,26 @@
             </div>
         </div>
     </section>
+
+    <footer class="rodape">
+        <div class="redes">
+            <a href=""><img src="imagens/linkedin.png" alt="linkedin"></a>
+            <a href=""><img src="imagens/facebook.png" alt="Facebook"></a>
+            <a href=""><img src="imagens/instagram.png" alt="instagram"></a>
+            <a href=""><img src="imagens/twitter.png" alt="Twitter"></a>
+        </div>
+        <div>
+            <h2>Email</h2>
+            <a href="mailto:empresa@gmail.com">empresa@gmail.com</a>
+        </div>
+        <div>
+            <h2>Telefone</h2>
+            <a href="tel:+5511961805535">+55 (11) 961805535</a>
+        </div>
+        <div>
+            <h2>Endereço</h2>
+            <a href="">Av. Paulista, São Paulos - SP, 01310-904 </a>
+        </div>
+    </footer>
 </body>
 </html>
