página sobre modificada

--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketing</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sobre.css">
+    <script src="javascript/app.js" defer></script>
 </head>
 <body>
 
@@ -30,17 +32,17 @@
         </article> -->
     </header>
 
-    <main>
-        <section class="sobre">
-            <div class="container">
-                <div>
-                    <div>
-                        <img src="" alt="">
-                    </div>
-                </div>
+    <section class="sobre">
+        <article class="sobre-descricao">
+            <h2>Sobre a Empresa</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem laborum nulla odio voluptate minus quis ex neque vel numquam. Molestiae eius sit accusantium fugit magnam praesentium quidem, ducimus nemo illo!</p>
+        </article>
+        <div class="logo">
+            <div>
+                <img src="imagens/executiva.jpg" alt="">
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
     <footer class="rodape">
         <div class="redes">
