--- a/servicos.html
+++ b/servicos.html
@@ -16,7 +16,7 @@
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href=".servicos.html">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
@@ -30,10 +30,10 @@
         </article> -->
     </header>
 
-   <section>
+   <section class="servicos">
         <div class="Comunicacoes">
             <div>
-                <img src="" alt="">
+                <img src="imagens/7.jpg" alt="" width="300px">
             </div>
             <h3>Comunicações</h3>
             <p>Pretium lectus quam id leo in vitae turpis. Mattis pellentesque id nibh tortor id.</p>
@@ -42,18 +42,18 @@
 
         <div class="design">
             <div>
-                <img src="" alt="">
+                <img src="imagens/8.jpg" alt="" width="300px">
             </div>
-            <h3>Comunicações</h3>
+            <h3>Design</h3>
             <p>Pretium lectus quam id leo in vitae turpis. Mattis pellentesque id nibh tortor id.</p>
             <a href="">Saiba mais</a>
         </div>
 
         <div class="marketing">
             <div>
-                <img src="" alt="">
+                <img src="imagens/7.jpg" alt="" width="300px">
             </div>
-            <h3>Comunicações</h3>
+            <h3>Marketing</h3>
             <p>Pretium lectus quam id leo in vitae turpis. Mattis pellentesque id nibh tortor id.</p>
             <a href="">Saiba mais</a>
         </div>
