--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href=".servicos.html">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
